--- a/HelloMamba.ipynb
+++ b/HelloMamba.ipynb
@@ -102,9 +102,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Alright, it looks like nothing happened. Let's go ahead and try actually using some of the packages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2.1 | Create an Array\n",
-    "\n",
-    "Alright, it looks like nothing happened. Let's go ahead and try actually using some of the packages.\n",
     "\n",
     "We will start by creating a numpy array and then we will use matplotlib to plot it. An array is a new type of data container. A single dimensional array (as show below) is the same thing as a vector. A two dimensional array is the same as a matrix. Arrays can have arbitrary numbers of dimensions, however we won't get into higher dimensional arrays yet."
    ]
