--- a/HelloMamba.ipynb
+++ b/HelloMamba.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "The final step before you can start running cells is to select the kernel for your notebook. This tells the notebook which environment to use to run the code. To select the kernel you can click on the kernel button in the top right of the vscode window that looks like this:\n",
     "\n",
-    "![kernel-button](./figures/select-kernel.png)\n",
+    "![kernel-button](figures/select-kernel.png)\n",
     "\n",
     "If you do not see the name of the environment you just created, you can click 'Select another kernel > Python Environments...\" and then select the one with the name of the correct environment.\n",
     "\n",
